rubocop/examples/good/Style_BracesAroundHashParameters.rb
# TODO: This cop checks for braces around the last parameter
#   in a method call if the last parameter is a hash.
