rubocop/examples/bad/style_EndOfLine.rb
# TODO: This cop checks for Windows-style line endings in the source code.
